# macro-fun

./: Cargo.toml  README.md
amplify/: Cargo.toml
amplify/src/: lib.rs
greet/: Cargo.toml
greet/src/: main.rs
macro-fun/: Cargo.toml
macro-fun/src/: lib.rs
