[package]
name = "amplify"
version = "0.1.0"
edition = "2021"
description = "Attribute procedural macro to turn all string literals in a crate to UPPERCASE."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
quote = "1"

[lib]
proc-macro = true