[package]
name = "macro-fun"
version = "0.1.0"
edition = "2021"
description = "Toying with Rust procedural macros."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
litrs = "0.2"

[lib]
proc-macro = true

[profile.release]
# Set options to produce smaller binary. Rust makes very large binaries otherwise.
strip = true  # strip symbols from the binary
opt-level = "z"  # Optimize for size
lto = true  # enable link-time optimizations
panic = "abort"  # abort (not unwind) on panic
